Fri Sep  3 20:17:08 1999  Jeffrey A Law  (law@cygnus.com)

	* emulparams/elf64hppa.sh (MAXPAGESIZE): Define.
	(OTHER_READONLY_SECTIONS, DATA_PLT): Likewise.

Thu Sep  2 14:32:03 1999  Jeffrey A Law  (law@cygnus.com)

	* emulparams/elf64hppa.sh: New file.
	* configure.tgt (hppa*w-*-*): Use elf64hppa emulation.
	* Makefile.am (ALL_64_EMULATIONS): Add eelf64hppa.o
	(eelf64hppa.c): Add dependencies.
	* Makefile.in: Rebuilt.

1999-08-25  Philip Blundell  <pb@nexus.co.uk>

	* emulparams/armelf.sh (OTHER_BSS_SYMBOLS): Add __end__.
	* emulparams/armelf_linux.sh: Likewise.
	* emulparams/armelf_linux26.sh: Likewise.

1999-08-24  Nick Clifton  <nickc@cygnus.com>

	From a patch submitted by Roland McGrath  <roland@baalperazim.frob.com>

	* configure.tgt (arm-*-netbsd*): New target.
	* Makefile.am (ALL_EMULATIONS): Add earmnbsd.o.
	(earmnbsd.c): New rule with deps.
	* Makefile.on: Regenerate.
	* emulparams/armnbsd.sh: New file.

1999-08-23  Nick Clifton  <nickc@cygnus.com>

	* emulparams/elf32mcore.sh (PARSE_AND_LIST_ARGS): Define.
	Implement --base-file command line switch.

	* emultempl/elf32.em: Add ability for individual targets to have
	their own command line switches by defining PARSE_AND_LIST_ARGS.

1999-08-19  Andreas Schwab  <schwab@suse.de>

	* configure.host: Use ${CC} instead of gcc for finding compiler
	related files.

1999-08-11  Nick Clifton  <nickc@cygnus.com>

	* scripttempl/mcorepe.sc (OUTPUT_FORMAT): Fix typo.

1999-08-09  Mark Elbrecht  <snowball3@bigfoot.com>

	* scripttempl/i386go32.sc: Handle g++ exception sections.

1999-08-09  Ian Lance Taylor  <ian@zembu.com>

	From Wally Iimura <iimura@microunity.com>:
	* ldlang.c (lang_size_sections): When checking whether an address
	is within a region, don't get confused by wrapping around at the
	end of the address space.

1999-08-08  Ian Lance Taylor  <ian@zembu.com>

	* ldlang.c (wild_doit): Update for renaming of SEC_SHORT to
	SEC_SMALL_DATA.

	* Makefile.am: Rename .dep* files to DEP*.  Change DEP variable to