@@ -1,0 +1,5 @@
+SCRIPT_NAME=elf
+OUTPUT_FORMAT="elf32-pj"
+TEXT_START_ADDR=0x1000000
+MAXPAGESIZE=0x1000
+ARCH=pj
